Bug 261003 - two blank separated words in location field make rekonq crash
Summary: two blank separated words in location field make rekonq crash
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: 0.7
Assignee: Andrea Diamantini
URL:
Keywords:
: 263928 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-22 21:23 UTC by squan
Modified: 2011-03-03 00:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description squan 2010-12-22 21:23:51 UTC
Application: rekonq (0.6.55)
KDE Platform Version: 4.5.85 (4.6 Beta2)
Qt Version: 4.7.1
Operating System: Linux 2.6.37-rc5-12-default i686
Distribution: "openSUSE 11.4 Milestone 5 of 6 (i586)"

-- Information about the crash:
Entered two words "obscure error" or "merrz christmas" in the location bar and pressed enter which makes rekonq just crash (only if  no browsing history match is shown)

The crash can be reproduced every time.

-- Backtrace:
Application: rekonq (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb58c7710 (LWP 17281))]

Thread 9 (Thread 0xb00f0b70 (LWP 17284)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb6d0a125 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb45a4d27 in ?? () from /usr/lib/libQtWebKit.so.4
#3  0xb6d05b25 in start_thread () from /lib/libpthread.so.0
#4  0xb60c2c5e in clone () from /lib/libc.so.6

Thread 8 (Thread 0xaf3bab70 (LWP 17285)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb6d0a125 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d81ab0 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb316b056 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x8175c88, th=0x8e45c18) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0xb316e7a7 in waitForAvailableJob (this=0x8192f18, th=0x8e45c18) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:356
#5  ThreadWeaver::WorkingHardState::applyForWork (this=0x8192f18, th=0x8e45c18) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WorkingHardState.cpp:71
#6  0xb316aa03 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8175c88, th=0x8e45c18, previous=0x0) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:351
#7  0xb316e7c3 in ThreadWeaver::WorkingHardState::applyForWork (this=0x8192f18, th=0x8e45c18) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WorkingHardState.cpp:74
#8  0xb316aa03 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8175c88, th=0x8e45c18, previous=0x0) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:351
#9  0xb316e7c3 in ThreadWeaver::WorkingHardState::applyForWork (this=0x8192f18, th=0x8e45c18) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WorkingHardState.cpp:74
#10 0xb316aa03 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8175c88, th=0x8e45c18, previous=0x0) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:351
#11 0xb316e7c3 in ThreadWeaver::WorkingHardState::applyForWork (this=0x8192f18, th=0x8e45c18) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WorkingHardState.cpp:74
#12 0xb316aa03 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8175c88, th=0x8e45c18, previous=0x8eeecf0) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:351
#13 0xb316b564 in ThreadWeaver::ThreadRunHelper::run (this=0xaf3ba314, parent=0x8175c88, th=0x8e45c18) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/Thread.cpp:87
#14 0xb316b61a in ThreadWeaver::Thread::run (this=0x8e45c18) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/Thread.cpp:142
#15 0xb6d813aa in ?? () from /usr/lib/libQtCore.so.4
#16 0xb6d05b25 in start_thread () from /lib/libpthread.so.0
#17 0xb60c2c5e in clone () from /lib/libc.so.6

Thread 7 (Thread 0xa80d5b70 (LWP 17320)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb6d0a125 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d81ab0 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb316b056 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x8175c88, th=0x8e9b368) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0xb316e7a7 in waitForAvailableJob (this=0x8192f18, th=0x8e9b368) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:356
#5  ThreadWeaver::WorkingHardState::applyForWork (this=0x8192f18, th=0x8e9b368) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WorkingHardState.cpp:71
#6  0xb316aa03 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8175c88, th=0x8e9b368, previous=0x0) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:351
#7  0xb316e7c3 in ThreadWeaver::WorkingHardState::applyForWork (this=0x8192f18, th=0x8e9b368) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WorkingHardState.cpp:74
#8  0xb316aa03 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8175c88, th=0x8e9b368, previous=0x96b25d8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:351
#9  0xb316b564 in ThreadWeaver::ThreadRunHelper::run (this=0xa80d5314, parent=0x8175c88, th=0x8e9b368) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/Thread.cpp:87
#10 0xb316b61a in ThreadWeaver::Thread::run (this=0x8e9b368) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/Thread.cpp:142
#11 0xb6d813aa in ?? () from /usr/lib/libQtCore.so.4
#12 0xb6d05b25 in start_thread () from /lib/libpthread.so.0
#13 0xb60c2c5e in clone () from /lib/libc.so.6

Thread 6 (Thread 0xa78d4b70 (LWP 17322)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb6d0a125 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d81ab0 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb316b056 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x8175c88, th=0x9535ba8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0xb316e7a7 in waitForAvailableJob (this=0x8192f18, th=0x9535ba8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:356
#5  ThreadWeaver::WorkingHardState::applyForWork (this=0x8192f18, th=0x9535ba8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WorkingHardState.cpp:71
#6  0xb316aa03 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8175c88, th=0x9535ba8, previous=0x96cec90) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:351
#7  0xb316b564 in ThreadWeaver::ThreadRunHelper::run (this=0xa78d4314, parent=0x8175c88, th=0x9535ba8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/Thread.cpp:87
#8  0xb316b61a in ThreadWeaver::Thread::run (this=0x9535ba8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/Thread.cpp:142
#9  0xb6d813aa in ?? () from /usr/lib/libQtCore.so.4
#10 0xb6d05b25 in start_thread () from /lib/libpthread.so.0
#11 0xb60c2c5e in clone () from /lib/libc.so.6

Thread 5 (Thread 0xa6e44b70 (LWP 17323)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb6d0a125 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6d81ab0 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#3  0xb316b056 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x8175c88, th=0x96b9fe8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0xb316e7a7 in waitForAvailableJob (this=0x8192f18, th=0x96b9fe8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:356
#5  ThreadWeaver::WorkingHardState::applyForWork (this=0x8192f18, th=0x96b9fe8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WorkingHardState.cpp:71
#6  0xb316aa03 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8175c88, th=0x96b9fe8, previous=0x0) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:351
#7  0xb316e7c3 in ThreadWeaver::WorkingHardState::applyForWork (this=0x8192f18, th=0x96b9fe8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WorkingHardState.cpp:74
#8  0xb316aa03 in ThreadWeaver::WeaverImpl::applyForWork (this=0x8175c88, th=0x96b9fe8, previous=0x0) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/WeaverImpl.cpp:351
#9  0xb316b564 in ThreadWeaver::ThreadRunHelper::run (this=0xa6e44314, parent=0x8175c88, th=0x96b9fe8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/Thread.cpp:87
#10 0xb316b61a in ThreadWeaver::Thread::run (this=0x96b9fe8) at /usr/src/debug/kdelibs-4.5.85/threadweaver/Weaver/Thread.cpp:142
#11 0xb6d813aa in ?? () from /usr/lib/libQtCore.so.4
#12 0xb6d05b25 in start_thread () from /lib/libpthread.so.0
#13 0xb60c2c5e in clone () from /lib/libc.so.6

Thread 4 (Thread 0xa5334b70 (LWP 17346)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb6d0a125 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xae323b4a in queue_processor(void*) () from /usr/lib/jvm/java-1.6.0-openjdk-1.6.0/jre/lib/i386/IcedTeaPlugin.so
#3  0xb6d05b25 in start_thread () from /lib/libpthread.so.0
#4  0xb60c2c5e in clone () from /lib/libc.so.6

Thread 3 (Thread 0xa4b33b70 (LWP 17347)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb6d0a125 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xae323b4a in queue_processor(void*) () from /usr/lib/jvm/java-1.6.0-openjdk-1.6.0/jre/lib/i386/IcedTeaPlugin.so
#3  0xb6d05b25 in start_thread () from /lib/libpthread.so.0
#4  0xb60c2c5e in clone () from /lib/libc.so.6

Thread 2 (Thread 0xa4332b70 (LWP 17348)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb6d0a125 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xae323b4a in queue_processor(void*) () from /usr/lib/jvm/java-1.6.0-openjdk-1.6.0/jre/lib/i386/IcedTeaPlugin.so
#3  0xb6d05b25 in start_thread () from /lib/libpthread.so.0
#4  0xb60c2c5e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb58c7710 (LWP 17281)):
[KCrash Handler]
#7  isEmpty (this=0xbf8e5388, str=...) at /usr/include/QtCore/qstring.h:708
#8  KUrl::KUrl (this=0xbf8e5388, str=...) at /usr/src/debug/kdelibs-4.5.85/kdecore/io/kurl.cpp:388
#9  0xb24ce20e in ?? () from /usr/lib/libkdeinit4_rekonq.so
#10 0xb6e7e08b in QCoreApplicationPrivate::sendThroughApplicationEventFilters(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#11 0xb638a3aa in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#12 0xb6393a78 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#13 0xb74d6351 in KApplication::notify (this=0xbf8e6284, receiver=0x96b6900, event=0xbf8e5884) at /usr/src/debug/kdelibs-4.5.85/kdeui/kernel/kapplication.cpp:311
#14 0xb6e7dfbe in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#15 0xb638838d in ?? () from /usr/lib/libQtGui.so.4
#16 0xb643c09e in ?? () from /usr/lib/libQtGui.so.4
#17 0xb643c56c in ?? () from /usr/lib/libQtGui.so.4
#18 0xb6415182 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#19 0xb6440940 in ?? () from /usr/lib/libQtGui.so.4
#20 0xb5b30ca9 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#21 0xb5b314b0 in ?? () from /lib/libglib-2.0.so.0
#22 0xb5b3176e in g_main_context_iteration () from /lib/libglib-2.0.so.0
#23 0xb6eac73b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#24 0xb644053a in ?? () from /usr/lib/libQtGui.so.4
#25 0xb6e7d29d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#26 0xb6e7d4c9 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#27 0xb6e81f70 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#28 0xb6388124 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#29 0xb24f9671 in kdemain () from /usr/lib/libkdeinit4_rekonq.so
#30 0x0804e531 in _start ()

Reported using DrKonqi
Comment 1 Panagiotis Papadopoulos 2011-01-20 20:14:39 UTC
it works here with the latest rekonq from mainline…
Comment 2 Federico Muciaccia 2011-02-19 00:09:15 UTC
Bug also in rekonq 0.6.80 (Chackra-project, Archlinux-derived distribution)
Comment 3 Andrea Diamantini 2011-02-28 21:51:09 UTC
(In reply to comment #0)
> (only if no browsing history match is shown)

I could not properly understand what was happening here until I read a couple of times this. ;)
Comment 4 Andrea Diamantini 2011-02-28 21:52:53 UTC
Git commit 2817b7918af638f93c37ad8066886eecd47dc7ca by Andrea Diamantini.
Committed on 28/02/2011 at 21:49.
Pushed by adjam into branch 'master'.

Do NOT take the first element of an empty list

BUG: 261003

M  +10   -1    src/urlbar/completionwidget.cpp     

http://commits.kde.org/rekonq/2817b7918af638f93c37ad8066886eecd47dc7ca
Comment 5 Andrea Diamantini 2011-03-03 00:11:01 UTC
*** Bug 263928 has been marked as a duplicate of this bug. ***