Do NOT take the first element of an empty list

BUG: 261003